[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb-dataforge"
version = "0.1.0"
description = "A toolbox for building modular data processing pipelines with composable transformations and optimized filtering tailored towards exploratory analyses of high-dimensional time-series data"
readme = "README.md"
authors = [
    {name = "Aniruddh Galgali"},
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.urls]
Repository = "https://github.com/anirgalgali/nb-dataforge"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]